--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
   --color-font: #f1f1f1;
   --color-background: #0d1217;
   --border-par: 3px solid #f1f1f1;
+  --border-bottom-set: 2px solid #0d1217;
+  --border-set: 1px solid #0d1217;
+  --hover-view-color: gray;
+  --hover-nav-color: brown;
+  --button-color: #84df9e;
 }
 
 body,
@@ -13,5 +18,5 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #F1F1F1;
+  background: var(--color-font);
 }
