--- a/css/burger.css
+++ b/css/burger.css
@@ -1,3 +1,7 @@
+#nav_toggle {
+  opacity: 0;
+}
+
 @media screen and (max-width: 768px) {
 
 .container_nav {
@@ -44,7 +48,7 @@
   visibility: hidden;
   top: 0;
   right: -100%;
-  width: 200px;
+  width: 300px;
   height: 100%;
   margin: 0;
   padding: 80px 0;
