--- a/css/reservation.css
+++ b/css/reservation.css
@@ -19,7 +19,7 @@
   line-height: 90px;
 }
 
-.nav a:nth-child(2) {
+.nav li:nth-child(2) {
   text-decoration: underline;
 }
 
@@ -28,6 +28,15 @@
   width: 180px;
   margin: 0 auto;
   border-bottom: var(--border-par);
+}
+
+.wrapper_welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 190px;
 }
 /*HEADER*/
 
@@ -38,13 +47,13 @@
   margin: 50px 0;
 }
 
-.wrapper_gallery > img {
+.gallery_img {
   width: 250px;
   height: 390px;
   transition: 0.5s;
 }
 
-.wrapper_gallery > img:hover {
+.gallery_img:hover {
   transform: scale(1.2);
   cursor: pointer;
 }
@@ -156,3 +165,104 @@
   cursor: pointer;
 }
 /*FORM*/
+
+/*MOBILE PHONES*/
+@media screen and (max-width: 768px) {
+
+  .name {
+    margin-top: 20px;
+  }
+  
+  .name,
+  .welcome,
+  .welcome_heading {
+    font-size: 50px;
+    line-height: 60px;
+  }
+
+  .wrapper_welcome {
+    margin: 300px 0 0 5px;
+  }
+
+  .line_reservation {
+    width: 150px;
+  }
+
+  .gallery_img {
+    width: 140px;
+    height: 180px;
+    border-radius: 10px;
+  }
+
+  .gallery_text {
+    font-size: 21px;
+    line-height: 30px;
+  }
+
+  .form_heading {
+    font-size: 40px;
+    line-height: 45px;
+  }
+
+  .date {
+    margin-right: 50px;
+  }
+
+  #date,
+  #number,
+  #wish,
+  #name,
+  #phone,
+  #button_book {
+    border-radius: 14px;
+  }
+
+  .gallery_img:hover {
+    transform: scale(1.1);
+  }
+}
+
+@media screen and (max-width: 608px) {
+  .name,
+  .welcome,
+  .welcome_heading,
+  .form_heading {
+    font-size: 35px;
+    line-height: 45px;
+  }
+
+  .date_person {
+    margin-bottom: 20px;
+    flex-direction: column;
+  }
+
+  .gallery_heading {
+    font-size: 40px;
+    line-height: 50px;
+  }
+
+  .gallery_img {
+    width: 180px;
+    height: 220px;
+    margin-bottom: 10px;
+  }
+
+  .gallery_text,
+  .form_font {
+    font-size: 17px;
+    line-height: 25px;
+  }
+
+  .date {
+    margin-right: 20px;
+  }
+
+  .wrapper_gallery {
+    flex-wrap: wrap;
+  }
+
+  .gallery_img:hover {
+    transform: none;
+  }
+}
+/*MOBILE PHONES*/
